fixing youtube video spilling over to the fetures section on big screens

--- a/src/components/HomePage/home.module.css
+++ b/src/components/HomePage/home.module.css
@@ -69,7 +69,6 @@
 
 .hero_image_container {
   width: 100%;
-  height: 400px;
   margin-bottom: 40px;
 }
 
